Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91990

qdoc: \property command fails with a const property type

XMLWordPrintable

    • 526604ea5705ba9c61161da98dafda93cafc5fba (qt/qttools/dev) 96f53ec6b387c8bd30ec0ce94fabad85414c60a4 (qt/qttools/6.1) b554c4db5c672108448f072ba210783f2bc378b5 (qt/qttools/6.0)
    • Da Vinci sprint 30

      qt5/qtscxml/src/statemachine/qsignaltransition.h:

      Q_PROPERTY(const QObject* senderObject READ senderObject WRITE setSenderObject NOTIFY senderObjectChanged)

       -> qt5/qtscxml/src/statemachine/qsignaltransition.cpp:96: (qdoc) warning: Cannot find 'QSignalTransition::senderObject' specified with '\property' in any header file

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            treinio Topi Reiniö
            treinio Topi Reiniö
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes