qdoc: Correctly handle const property types

The property type defined in Q_PROPERTY may contain the const
qualifier. Store the qualifier and make the code a bit more
robust against ill-formatted property declarations.

Fixes: QTBUG-91990
Change-Id: I6b06e4c8af8bb9dec3c467c6e19d9987b8340110
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 526604ea5705ba9c61161da98dafda93cafc5fba)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>